--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 version: '3.9'
 services:
   backend:
-    build: ./src/backend
+    build: ./src/backend/
     ports:
       - "3000:3000"
     volumes:
       - ./src/backend:/usr/src/app
+    depends_on:
+      - "dbservice" 
   dbservice:
     image: postgres
     ports:
