--- a/src/backend/dockerfile
+++ b/src/backend/dockerfile
@@ -1,10 +1,11 @@
-FROM node:16
+FROM node
 
 WORKDIR /usr/src/app
 
-COPY package*.json ./
+COPY package.json .
 RUN npm install
-COPY src .
+RUN npm i -g @nestjs/cli
+COPY . .
 EXPOSE 3000
 
 CMD [ "npm", "run", "start:dev"]
