--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -35,6 +35,8 @@
     "@types/hapi__joi": "^17.1.8",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/qrcode": "^1.4.2",
+    "@types/speakeasy": "^2.0.7",
     "axios": "^0.25.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
@@ -46,9 +48,12 @@
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.6.1",
     "pg": "^8.7.1",
+    "qrcode": "^1.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "speakeasy": "^2.0.0",
+    "twilio": "^3.73.1",
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
