--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - ./src/backend:/usr/src/app
     depends_on:
       - "dbservice"
+    networks:
+      - db-network
   dbservice:
     image: postgres
     ports:
@@ -16,6 +18,8 @@ services:
       - POSTGRES_DB=ft_transendance
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
+    networks:
+      - db-network
   client:
     volumes:
       - ./client:/usr/app
@@ -25,3 +29,6 @@ services:
     ports:
       - "5000:8080"
     command: yarn serve
+
+networks:
+  db-network:
