--- a/src/backend/dockerfile
+++ b/src/backend/dockerfile
@@ -6,6 +6,5 @@ COPY package.json .
 RUN npm install
 RUN npm i -g @nestjs/cli
 COPY . .
-EXPOSE 3000
 
-CMD [ "npm", "run", "start:dev"]
+CMD npm run start:dev
