--- a/src/client/package.json
+++ b/src/client/package.json
@@ -22,6 +22,7 @@
     "node": "^17.2.0",
     "npm": "^8.3.0",
     "serve": "^13.0.2",
+    "socket.io-client": "^4.4.1",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.0",
     "vue-class-component": "^7.2.3",
