--- a/src/backend/dev.env
+++ b/src/backend/dev.env
@@ -5,6 +5,8 @@ DB_PASSWORD=admin
 DB_NAME=ft_transendance
 PORT=3000
 MODE=DEV
+
+BACKEND_URL=http://127.0.0.1:3000/api
 ######## 42 API CONFIG ##########
 TOKEN_API=https://api.intra.42.fr/oauth/token
 AUTHORIZAION_URL=https://api.intra.42.fr/oauth/authorize
