--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -51,6 +51,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.6.1",
+    "path-posix": "^1.0.0",
     "pg": "^8.7.1",
     "qrcode": "^1.5.0",
     "reflect-metadata": "^0.1.13",
