--- a/src/client/package.json
+++ b/src/client/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^15.0.0",
     "i": "^0.3.7",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "node": "^17.2.0",
     "npm": "^8.3.0",
     "serve": "^13.0.2",
@@ -26,6 +28,7 @@
     "vue": "^2.6.14",
     "vue-axios": "^3.4.0",
     "vue-class-component": "^7.2.3",
+    "vue-notification": "^1.3.20",
     "vue-p5": "^0.8.4",
     "vue-p5-component": "^1.0.4",
     "vue-plugin-load-script": ">=2.0.0",
@@ -33,6 +36,7 @@
     "vue-router": "^3.2.0",
     "vue-spinner": "^1.0.4",
     "vue-svg-loader": "^0.16.0",
+    "vue-sweetalert2": "^5.0.2",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
