--- a/src/client/package.json
+++ b/src/client/package.json
@@ -28,6 +28,7 @@
     "vue": "^2.6.14",
     "vue-axios": "^3.4.0",
     "vue-class-component": "^7.2.3",
+    "vue-cookies": "^1.7.4",
     "vue-notification": "^1.3.20",
     "vue-p5": "^0.8.4",
     "vue-p5-component": "^1.0.4",
