--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -34,6 +34,7 @@
     "@nestjs/typeorm": "^8.0.2",
     "@nestjs/websockets": "^8.2.6",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.4.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/hapi__joi": "^17.1.8",
     "@types/passport-jwt": "^3.0.6",
@@ -44,6 +45,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cookie": "^0.4.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "global": "^4.4.0",
