--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -61,7 +61,8 @@
     "rxjs": "^7.2.0",
     "speakeasy": "^2.0.0",
     "twilio": "^3.73.1",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.0",
