--- a/src/client/package.json
+++ b/src/client/package.json
@@ -25,6 +25,8 @@
     "moment-timezone": "^0.5.34",
     "node": "^17.2.0",
     "npm": "^8.3.0",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "serve": "^13.0.2",
     "socket.io-client": "^4.4.1",
     "vue": "^2.6.14",
