--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -49,6 +49,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "global": "^4.4.0",
+    "moment": "^2.29.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
