--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -12,7 +12,7 @@
     "start": "NODE_ENV='' nest start",
     "start:dev": "NODE_ENV=dev nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "NODE_ENV='' node dist/main",
+    "start:prod": "NODE_ENV='dev' node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
