--- a/srcs/backend/dev.env
+++ b/srcs/backend/dev.env
@@ -6,6 +6,9 @@ DB_NAME=ft_transendance
 PORT=3000
 MODE=DEV
 
+HOST=http://127.0.0.1
+
+
 BACKEND_URL=http://127.0.0.1:3000/api
 ######## 42 API CONFIG ##########
 TOKEN_API=https://api.intra.42.fr/oauth/token
