--- a/srcs/backend/prod.env
+++ b/srcs/backend/prod.env
@@ -7,6 +7,8 @@ PORT=3000
 MODE=DEV
 
 BACKEND_URL=http://127.0.0.1:3000/api
+HOST=http://127.0.0.1:3000/
+
 ######## 42 API CONFIG ##########
 TOKEN_API=https://api.intra.42.fr/oauth/token
 AUTHORIZAION_URL=https://api.intra.42.fr/oauth/authorize
