--- a/srcs/backend/prod.env
+++ b/srcs/backend/prod.env
@@ -7,7 +7,7 @@ PORT=3000
 MODE=DEV
 
 BACKEND_URL=http://127.0.0.1:3000/api
-HOST=http://127.0.0.1:3000/
+HOST=http://127.0.0.1
 
 ######## 42 API CONFIG ##########
 TOKEN_API=https://api.intra.42.fr/oauth/token
