--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,5 @@
 version: "3.3"
 services:
-  backend:
-    build:
-      context: ./
-      dockerfile: Backend_Dockerfile
-    ports:
-      - "3000:3000"
-    # volumes:
-    #   - ./srcs/backend:/usr/src/app
-    #   - /usr/src/app/node_modules
-    depends_on:
-      - "dbservice"
-    restart: always
-    container_name: "backend"
-    image: backend
-
   dbservice:
     image: postgres
     restart: always
@@ -35,10 +20,24 @@ services:
     ports:
       - "5000:5000"
     restart: always
-    depends_on:
-      - "backend"
+    # depends_on:
+    #   - "backend"
     image: client
     command: serve -l 5000 -s ./dist
 
+  backend:
+    build:
+      context: ./
+      dockerfile: Backend_Dockerfile
+    ports:
+      - "3000:3000"
+    # volumes:
+    #   - ./srcs/backend:/usr/src/app
+    #   - /usr/src/app/node_modules
+    depends_on:
+      - "dbservice"
+    restart: always
+    container_name: "backend"
+    image: backend
 volumes:
   pgdata:
