--- a/srcs/client/.env
+++ b/srcs/client/.env
@@ -1,2 +1,3 @@
-VUE_APP_API_URL=http://192.168.99.100:3000/api
-VUE_APP_SERVER_URL=http://192.168.99.100:3000
+VUE_APP_API_URL=http://192.168.11.108:3000/api
+VUE_APP_SERVER_URL=http://192.168.11.108:3000
+VUE_APP_SERVER_IP=http://192.168.11.108
