--- a/srcs/client/tsconfig.json
+++ b/srcs/client/tsconfig.json
@@ -13,6 +13,8 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "allowJs": true,
+    "noImplicitAny": false,
     "types": [
       "webpack-env",
       "jest"
