--- a/srcs/client/.env
+++ b/srcs/client/.env
@@ -1,3 +1,3 @@
-VUE_APP_API_URL=http://172.16.84.159:3000/api
-VUE_APP_SERVER_URL=http://172.16.84.159:3000
-VUE_APP_SERVER_IP=http://172.16.84.159
+VUE_APP_API_URL=http://localhost:3000/api
+VUE_APP_SERVER_URL=http://localhost:3000
+VUE_APP_SERVER_IP=http://localhost
