--- a/srcs/client/package.json
+++ b/srcs/client/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve --port 5000",
-    "#serve": "vue-cli-service serve --port 5000",
+    "#serve": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve --port 5678",
+    "serve": "vue-cli-service serve --port 5678",
     "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
@@ -29,7 +29,7 @@
     "postinstall-postinstall": "^2.1.0",
     "serve": "^13.0.2",
     "socket.io-client": "^4.4.1",
-    "vue": "^2.6.14",
+    "vue": "2.6.14",
     "vue-axios": "^3.4.0",
     "vue-class-component": "^7.2.3",
     "vue-cookies": "^1.7.4",
@@ -57,7 +57,7 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "2.6.14"
   },
   "browserslist": [
     "> 1%",
